# todo_fastapi

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2025_06_17_1327-0eb501b06381_create_tasks_model.py  2025_06_17_2000-3f66da4954b6_create_users_model.py
app/backend/: config.py  session.py
app/enums/: tasks.py
app/models/: __init__.py  base.py  task.py  user.py
app/routers/: tasks.py  users.py
app/schemas/: tasks.py  users.py
app/services/: tasks.py  users.py
